# gb

./: .gitignore  Cargo.toml  README.md
notes/: TODO  links.md  ppu.md
src/: bus.rs  cart.rs  cpu.rs  dasm.rs  debug.rs  err.rs  event.rs  fps.rs  gb.rs  geometry.rs  headless.rs  int.rs  joypad.rs  keybinds.rs  logger.rs  main.rs  ppu.rs  ram.rs  screen.rs  shader.wgsl  state.rs  tick_counter.rs  timer.rs  ui.rs  util.rs  video.rs  view.rs
src/cart/: header.rs  mapper.rs  mbc1.rs  mbc3.rs  no_mbc.rs
