[package]
name = "gb"
version = "0.1.0"
authors = ["Travis Banken"]
edition = "2021"

[features]
instr-trace = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.2"
log = { version = "0.4.20", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
bytemuck = { version = "1.14.0", features = ["derive"] }
egui-wgpu = { version = "0.24.0", features = ["winit"] }
colored = "2.0.4"
egui-winit = "0.24.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
pollster = "0.3.0"
egui = "0.24.0"
